--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -18,7 +18,7 @@ a.active hr{
 
 @media (max-width:640px) {
   a.active{
-    background-color: #ffffff;
+    background-color: #9b4c3c;
     color: white;
   }
 }
